--- a/src/components/MainPage/mainPage.css
+++ b/src/components/MainPage/mainPage.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Rubik';
+    font-family: 'Gasq';
     src: url('../../../public/font/Gasq.otf') ;
     /* format('truetype') */
   }
