--- a/src/components/MainPage/mainPage.css
+++ b/src/components/MainPage/mainPage.css
@@ -20,7 +20,8 @@ body {
     /* font-family: "Rubik"; */
     /* font-weight: 100; */
     /* max-width: 1350px; */
-    max-width: 1450px;
+    /* max-width: 1450px; */
+    max-width: 1650px;
 }
 
 a {
@@ -117,11 +118,12 @@ nav ul {
     float: left;
     /* clear: both; */
     width: 100%;
-    /* margin: 0 100px; */
+    margin-top:  80px;
 }
 
 .header-left {
     /* float: left; */
+    padding-top: 50px;
     width: calc(100%/2);
     /* background-color: burlywood; */
 }
