--- a/src/components/MainPage/media-query.css
+++ b/src/components/MainPage/media-query.css
@@ -14,6 +14,7 @@
 
     .header-left {
         float: left;
+        padding-top:0px;
     }
 
     .scroll-div {
@@ -111,14 +112,14 @@
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
     .statistics div p {
-        font-size: 80px;
+        font-size: 70px;
         font-weight: 900;
     }
 
     .statistics div h6 {
         font-size: 15px;
         margin-inline: 3%;
-        width: 80%;
+        width: 90%;
 
     }
 }
