--- a/src/components/MainPage/MainSections/mainSections.css
+++ b/src/components/MainPage/MainSections/mainSections.css
@@ -21,7 +21,9 @@
 .section {
     margin-inline: 5vw;
     border-radius: 10px;
-    background-color: #d2d2d2;
+    background-color: #fff;
+    box-shadow: 0px 20px 40px #303030;
+
 }
 
 .sectionTwo {
@@ -36,13 +38,9 @@
 
 .about-right {
     display: none;
-    /* width: 40%;
-    justify-content: center;
-    align-items: center; */
 }
 
 .about-left {
-    /* background-color: aquamarine; */
     width: 60%;
     padding: 50px 25px;
 }
@@ -50,7 +48,8 @@
 .about-text {
     color: rgb(128, 127, 127);
     text-align: right;
-    /* line-height:3vw; */
+    line-height:200%;
+    letter-spacing: 1px;
 }
 
 .statistics {
@@ -58,8 +57,6 @@
 }
 
 .statistics div {
-    /* text-align: center; */
-    /* background-color: #F9B500; */
     margin-top: 30px;
 }
 
@@ -73,16 +70,12 @@
     font-size: 8px;
     margin-inline: 10%;
     color: rgb(9, 2, 42);
-    /* width: 100%; */
 }
 
 .about-img {
-    /* width: 240px; */
     width: 70%;
     height: 400px;
-    /* text-align: center; */
     padding: 40px 20px;
-    /* box-shadow:0 0 90px #F9B500 ; */
     border-radius: 50%;
 }
 
@@ -93,13 +86,10 @@
 
 .row-item {
     display: grid;
-    /* justify-content: space-between; */
-    /* flex-wrap: wrap; */
 }
 
 .skill-item {
     position: relative;
-    /* background-color: #F9B500; */
     width: 50%;
     margin-top: 11%;
 }
@@ -143,7 +133,6 @@
     background-image: url("../../../../public/images/wave.png");
     background-repeat: none;
     background-size: cover;
-    /* width: 1000vw; */
     padding-bottom: 40px;
 }
 
@@ -151,26 +140,16 @@
 
 .video-section {
     text-align: center;
-    /* width: 400px; */
 }
 
 .slider-video {
     width: 80%;
-    /* width: 100%; */
-    /* height: 40vw; */
     height: 100%;
-    /* border-radius: 8%; */
-    /* background-color: aqua; */
     margin-inline: auto;
-    /* border: 3px solid #d2d2d2; */
-    /* overflow: hidden; */
-    /* overflow-inline:hidden; */
 }
 
 .video-div {
     /* width: 100%; */
-    /* height: 100%; */
-    /* height: 30vw; */
 }
 
 .banner-img {
@@ -196,12 +175,10 @@
 /* ARTICLE */
 
 .card {
-    /* width: 30vw; */
-    /* height: 35vw; */
     width: 290px;
     height: 390px;
     border-radius: 25px;
-    background-color: #d2d2d2;
+    background-color: #fff;
 
     overflow: hidden;
     border: 1px solid grey;
@@ -252,7 +229,6 @@ color: #09022a;
 
 .right-contact {
     width: 90%;
-    /* background-color: #F9B500; */
     margin-bottom: 32px;
 
 }
@@ -263,9 +239,6 @@ color: #09022a;
     border-radius: 10px;
     border: 1px solid #fff;
     background-color: rgba(121, 118, 118, 0.674);
-    /* Add the blur effect */
-    /* filter: blur(0.5px); */
-    /* -webkit-filter: blur(0.5px); */
     text-align: center;
 }
 
@@ -300,23 +273,18 @@ color: #09022a;
 
 .textarea {
     height: 140px;
-    /* margin-block: -40px; */
 }
 
 .message-form div {
-    /* background-color: blue; */
     width: 100%;
     border: none;
-    /* outline: 0; */
     height: 50px;
     background-color: #F9B500;
     border-radius: 0px 0px 10px 10px;
     overflow: hidden;
-    /* text-align: center; */
     display: flex;
     align-items: center;
     justify-content: center;
-    /* position: relative; */
 }
 
 .message-form div:hover {
@@ -335,12 +303,10 @@ color: #09022a;
 /* HONORS */
 
 .buttons {
-    /* background-color: aqua; */
     text-align: center;
     display: flex;
     margin-inline: 4.5%;
     justify-content: center;
-    /* align-items: center; */
     border-bottom: 1px solid #807f7f;
     margin-bottom: 30px;
 }
