--- a/src/components/MainPage/mainPage.css
+++ b/src/components/MainPage/mainPage.css
@@ -5,23 +5,15 @@
   }
 
 * {
-    /* background-color: brown; */
-    /* width: 100%; */
-    /* height: 100%; */
-    /* padding: 0; */
     margin: 0 auto;
-    /* width: 1200px; */
 }
 
-/* پهنای کلی */
 
 body {
     font-family: "Gasq";
-    /* font-family: "Rubik"; */
-    /* font-weight: 100; */
-    /* max-width: 1350px; */
-    /* max-width: 1450px; */
     max-width: 1650px;
+    background-color: #eeeded;
+
 }
 
 a {
@@ -37,12 +29,10 @@ a:hover {
 
 li {
     list-style: none;
-    /* text-decoration: none; */
 }
 
 .d-flex {
     display: flex;
-    /* background-color: blue; */
 }
 
 .row {
@@ -53,13 +43,11 @@ li {
 /* .dis-block{
     display: none;
 } */
+
 /*HEADER*/
 
 header {
-    /* position: relative; */
     height: 120vw;
-    /* background-color: rgb(9, 2, 42); */
-    /* background-color: rgb(51, 14, 218); */
     background-image: url('../../../public/images/circle-scatter-haikei.png');
     padding-block: 20px;
 }
@@ -69,7 +57,6 @@ nav {
     border-radius: 10px;
     border: 1px solid #fff;
     background-color: rgba(121, 118, 118, 0.674);
-    /* Add the blur effect */
     filter: blur(0.5px);
     -webkit-filter: blur(0.5px);
 
@@ -84,7 +71,6 @@ nav {
 }
 
 nav ul li {
-    /* padding-inline: 20px; */
     display: none;
 }
 
@@ -114,26 +100,20 @@ nav ul {
 }
 
 .container-header {
-    /* background-color: #a52a2a; */
     float: left;
-    /* clear: both; */
     width: 100%;
     margin-top:  80px;
 }
 
 .header-left {
-    /* float: left; */
     padding-top: 50px;
     width: calc(100%/2);
-    /* background-color: burlywood; */
 }
 
 .img-person {
     width: 40vw;
-    /* height: 100%; */
     height: 40vw;
     margin-left: 7vw;
-    /* animation */
     position: relative;
     animation-name: img;
     animation-duration: 4s;
@@ -164,10 +144,7 @@ nav ul {
 
 
 .header-right {
-    /* float: right; */
     width: calc(100%/2.1);
-    /* background-color: aqua; */
-    /* height: 700%; */
 }
 
 .header-right>h1,
@@ -179,7 +156,6 @@ h6 {
 
 .header-right h1 {
     font-size: 5vw;
-    /* margin-top: 25vh; */
     margin-top: 12vw;
 }
 
@@ -190,7 +166,6 @@ h6 {
 
 .link-resume-social {
     align-items: center;
-    /* background-color: blue; */
     padding: 1vw;
 }
 
@@ -198,7 +173,6 @@ h6 {
     padding: 1vw;
     border-radius: 100px;
     margin: .5vw .3vw;
-    /* margin:5px; */
     background-color: #aaaaaa;
 }
 
